src/test/resources/ttml/test-suite/fail/dur010-fail.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- Available rendering time exceeded due to glyph drawing (cache unusued due to font weight change) -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <body>
    <div>
      <p begin="0s" end="0.5s" tts:fontSize="185%">あいうえおかきくけこさしすせそたち</p>
      <p begin="0.5s" end="4s" tts:fontWeight="bold" tts:fontSize="185%">あいうえおかきくけこさしすせそたち</p>
    </div>
  </body>
</tt>
